tests/baselines/reference/staticModifierAlreadySeen.errors.txt
==== tests/cases/compiler/staticModifierAlreadySeen.ts (2 errors) ====
    class C {
        static static foo = 1;
               ~~~~~~
!!! staticModifierAlreadySeen.ts(2,12): error TS1030: 'static' modifier already seen.
        public static static bar() { }
                      ~~~~~~
!!! staticModifierAlreadySeen.ts(3,19): error TS1030: 'static' modifier already seen.
    }